# Neuromorphic-Data-Processing

./: .gitignore  3dpolt.py  README.md  canny.py  eventFrquency.py  fitSineFromData.py  fitSineFromData2.py  foam90.aedat  getData.py  kmeansImage.py  machinelearning - Copy.py  machinelearning.py  pyproject.toml  readInVideoFile_K_Means (1).py  requirements.txt  requirements_dev.txt  setup.cfg  test2.py  tox.ini
.github/workflows/: tests.yml
MachineLearning/: displayMLData.py  frequencyML.py  getData.py  machinelearning - Copy.py  saveWaveformsAndFreqResult.py  waveforms&FrequencyML.py  waveformsAndFrequencyML.py  waveformsML.py
MachineLearning/resultData/: 1500acc.npy  1500loss.npy  1500val_acc.npy  1500val_loss.npy  750acc.npy  750loss.npy  750val_acc.npy  750val_loss.npy  acc1500.npy  loss1500.npy  val_acc1500.npy  val_loss1500.npy
MachineLearning/resultDataMotion/: 500acc.npy  500loss.npy  500val_acc.npy  500val_loss.npy  epochs.npy
image_processing/: fusion.py  lazy.sh  local_entropy.py  mean_shift_segmentation.py  otsu.py  wavelet_decomposition.py
plotting/: 3dplot.py  3dpolt.py  canny.py  config.json  eventChunkGraphHist.py  eventChunkGraphs.py  eventCountLogScale.py  eventDensity.py  eventFrquency.py  event_chunk_graph_hist.py  event_count_vs_polarization.py  event_density.py  fingerprintGraph.py  fingerprint_graph.py  fitSineFromData.py  fitSineFromData2.py  getPlottingData.py  kmeansImage.py  plotSpectrum.py  plotting_helper.py  readInVideoFile_K_Means (1).py  spikeGraph.py  spike_graph.py
shell_scripts/: bulk_3dPlot.sh  bulk_fingerprint.sh  bulk_spikePlot.sh
src/MachineLearning/: backgroundML.py  featureExtractionML.py  frequencyML.py  getData.py  get_data.py  saveWaveformsAndFreqResult.py  textureML.py  waveformsAndFrequencyML.py  waveformsML.py
src/image_processing/: canny.py  entropy_otsu.py  extract_pgm.py  fusion.py  gaussian.py  local_entropy.py  mean_shift_image.py  mean_shift_segmentation.py  otsu.py  pgm.py  wavelet_decomposition.py
src/plotting/: 3dplot.py  PCA_CSV.py  canny.py  displayMLData.py  dots_plot.py  event_chunk_graph_hist.py  event_count_vs_polarization.py  event_density.py  (+8 more)
tests/: test_get_plotting_data.py  test_regex.py
(+7 files in other folders)
