[metadata]
name = neuromorphic_data_processing
license = GPLv3
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    plotting_utils
install_requires =
    matplotlib==3.7.2
    numpy==1.24.3
    scikit_learn==1.3.0
    scipy==1.11.2
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.3.1
    pytest-cov>=4.0
    mypy>=1.2.0
    flake8>=6.0.0
    tox>=4.5.1

[options.package_data]
plotting_utils = py.typed

[flake8]
max-line-length = 120
