[metadata]
name = neuromorphic_data_processing
license = GPLv3
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11

[options]
packages =
    plotting_utils
install_requires =
    matplotlib==3.8.4
    numpy==1.26.4
    scikit_learn==1.4.2
    scipy==1.13.0
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=8.2.0
    pytest-cov>=5.0.0
    mypy>=1.10.0
    flake8>=7.0.0
    tox>=4.15.0

[options.package_data]
plotting_utils = py.typed

[flake8]
max-line-length = 120
